# obsidian-second-brain-mcp

./: .aiswe.yaml  .continuerc.json  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  MCP.md  PERSONAS.md  README.md  SPEC.md  TODO.md  env.example  pyproject.toml  select_files.py  smithery.yaml  vault-mcp.sh
.continue/mcpServers/: mcps.yaml
.continue/prompts/: fastmcp.prompt
.github/instructions/: rewrite-prompt.instructions.md
.roo/: mcp.json
docs/: architecture_overview.md  config_environment.md  dependencies_libraries.md  deployment_infrastructure.md  index.md  packages_modules.md  rag_obsidian_integration.md  tests_coverage.md
src/: main.py
src/mcps/: __init__.py  common.py  config.py  logs.py  server.py
src/mcps/prompts/: file_prompts.py
src/mcps/rag/: CLAUDE.md  HYBRID_SEARCH.md  __init__.py  database.py  document_processing.py  embeddings.py  interfaces.py  llm_reranker.py  ollama_reranker.py  openai_reranker.py  proxy_reranker.py  reranking.py  search.py  search_agent.py  summarization.py  vault.py
src/mcps/research/: __init__.py  agent.py  config.py  deep_research.py  lifespan.py  tools.py
src/mcps/resources/: doc_resource.py  project_resource.py  url_resource.py
src/mcps/tools/: deep_research.py  internet_search.py  obsidian_vault.py  rag_search.py
src/mcps/tools/research/: __init__.py  agent.py  config.py  deep_research.py  lifespan.py  tools.py
test/: test_chunk.py  test_document_processing.py  test_embedding_service.py  test_lancedb_store.py  test_ollama_reranker.py  vault_evaluation.py
test/mcps/: test_ollama_reranker.py  vault_evaluation.py
tests/: test_chunk.py  test_config.py  test_deep_research.py  test_document_processing.py  test_embedding_service.py  test_lancedb_store.py  test_langchain_reranker.py  test_llm_reranker.py  test_obsidian_vault_lifespan.py  test_obsidian_vault_tools.py  test_ollama_reranker.py  test_proxy_reranker.py  test_search.py  test_search_agent.py  test_server.py  test_summarization.py  test_vault.py  test_vault_search_engine.py  test_vault_summary_chunks.py  test_vault_summary_wiring.py  vault_evaluation.py
