[project]
name = "mcps"
version = "0.1.0"
description = "Model Context Protocol server for continue.dev"
readme = "README.md"
authors = [
    { name = "Alexander Smirnov", email = "alsmirnnov@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.8.1",
]
[tool.uv]
package = true

[project.scripts]
mcps = "mcps:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
      packages = ["src/mcps"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src/mcps","test"]
asyncio_mode = "auto"
